syntax = "proto3";

package packets;

message Packet {
  oneof data {
    Ping ping = 1;
    StartBenchmark startBenchmark = 2;
    StopBenchmark stopBenchmark = 3;
    StartTransfer startTransfer = 4;
    BlockInfo blockInfo = 6;
    AcceptTransfer acceptTransfer = 7;
  }
}

message Datagram {
  oneof data {
    BenchmarkPayload benchmarkPayload = 1;
    SendPiece sendPiece = 2;
    AckPiece ackPiece = 3;
  }
}

message Ping {
  string data = 1;
}

message StartBenchmark {

}

message StopBenchmark {

}

message StartTransfer {
  bytes id = 1;
  bytes filename = 2;
  uint32 blocks = 3;
  uint32 blockSize = 4;
  uint32 pieceSize = 5;
}

message AcceptTransfer {
  bytes id = 1;
}

message BlockInfo {
  bytes id = 1;
  uint32 block = 2;
  uint32 pieces = 3;
  bytes checksum = 4;
}

message SendPiece {
  bytes id = 1;
  uint32 block = 2;
  uint32 piece = 3;
  bytes data = 4;
}

message AckPiece {
  bytes id = 1;
  uint32 block = 2;
  uint32 piece = 3;
}

message BenchmarkPayload {
  bytes payload = 1;
}

message ValidationToken {
  bytes payload = 1;
  bytes signature = 2;
}

message ValidationPayload {
  bytes salt = 1;
  uint64 secs = 2;
  IpAddress address = 3;
  uint32 port = 4;
  bytes dcid = 5;
}

message IpAddress {
  oneof address {
    bytes V4 = 1;
    bytes V6 = 2;
  }
}